--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
 	"description": "What am I about?",
 	"main": "server.js",
 	"scripts": {
-		"start": "node server.js"
+		"start": "node server.js",
+		"dev": "nodemon server.js",
+		"test": "mocha"
 	},
 	"dependencies": {
 		"express": "^4.14.0",
@@ -32,5 +34,8 @@
 		"hyperdev",
 		"express"
 	],
-	"license": "MIT"
+	"license": "MIT",
+	"devDependencies": {
+		"nodemon": "^1.18.9"
+	}
 }
