--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
 	"main": "server.js",
 	"scripts": {
 		"start": "node server.js",
-		"dev": "nodemon server.js",
-		"test": "mocha"
+		"dev": "nodemon server.js"
 	},
 	"dependencies": {
 		"express": "^4.14.0",
