--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
 	"main": "server.js",
 	"scripts": {
 		"start": "node server.js",
-		"dev": "nodemon server.js"
+		"dev": "export NODE_ENV='test' && export PORT=3000 && nodemon server.js"
 	},
 	"dependencies": {
 		"express": "^4.14.0",
